# InfoCppSolution

./: .gitignore  CMakeLists.txt  InfoCppSolution.sln  README.md
InfoBaseData/: CMakeLists.txt  InfoBaseData.vcxproj  InfoBaseData.vcxproj.filters  InfoDefs.cpp  InfoDefs.h  attachment_info.cpp  attachment_info.h  base_importer.cpp  base_importer.h  blob_data.cpp  blob_data.h  datastore_manager.cpp  datastore_manager.h  http_client.cpp  http_client.h  info_document.cpp  info_document.h  info_fielddesc.cpp  info_fielddesc.h  info_response.cpp  info_response.h  info_utils.h  infobaseobject.cpp  infobaseobject.h  query_filter.cpp  query_filter.h  stringutils.cpp  stringutils.h  update_response.cpp  update_response.h
UnitTestInfoData/: UnitTestInfoData.vcxproj  UnitTestInfoData.vcxproj.filters  info_env.cpp  info_env.h  info_fixture.cpp  info_fixture.h  stdafx.cpp  unittest1.cpp  unittest_couchdbmanager.cpp  unittest_entry.cpp  unittest_etudmanager.cpp
couchdb/: CMakeLists.txt  ReadMe.txt  attachment_info.cpp  attachment_info.h  couchdb.vcxproj  couchdb.vcxproj.filters  couchdb_doc.cpp  couchdb_doc.h  couchdb_manager.cpp  couchdb_manager.h  couchdb_storemanager.cpp  couchdb_storemanager.h  index_response.cpp  index_response.h  query_filter.cpp  query_filter.h  server_info.cpp  server_info.h  sigletype_doc.cpp  sigletype_doc.h  update_response.cpp  update_response.h
gtestinfodata/: CMakeLists.txt  info_env.h  main.cpp
infodomain/: CMakeLists.txt  domaindefs.h  domainstrings.cpp  domainstrings.h  etud_importer.cpp  etud_importer.h  etud_strings.cpp  etud_strings.h  (+6 more)
(+17 files in other folders)
